<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2013 Gerhard Klostermeier
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.WriteCFSRFIDTag" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Batch" />

        <EditText
            android:id="@+id/cfsrfidBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:height="48dp"
            android:inputType="text"
            android:text="A3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cfsrfidDateY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:height="48dp"
                android:inputType="text"
                android:text="24" />

            <EditText
                android:id="@+id/cfsrfidDateM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:height="48dp"
                android:inputType="text"
                android:text="1" />

            <EditText
                android:id="@+id/cfsrfidDateD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:height="48dp"
                android:inputType="text"
                android:text="20" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Supplier" />

        <EditText
            android:id="@+id/cfsrfidSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:height="48dp"
            android:inputType="text"
            android:text="0A21" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Material" />

        <EditText
            android:id="@+id/cfsrfidMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:height="48dp"
            android:inputType="text"
            android:text="Name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Color" />

        <EditText
            android:id="@+id/cfsrfidColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:height="48dp"
            android:inputType="text"
            android:text="#0000FF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:height="48dp"
            android:layout_height="wrap_content"
            android:text="Number" />

        <EditText
            android:id="@+id/cfsrfidLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:height="48dp"
            android:inputType="text"
            android:text="016500" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Reserve" />

        <EditText
            android:id="@+id/cfsrfidReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="00010000000000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="69dp"
                android:text="Read" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="69dp"
                android:onClick="onWriteBlock"
                android:text="Write" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:id="@+id/scrollViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textViewMainFooter"
                android:layout_alignParentTop="true" >

                <LinearLayout
                    android:id="@+id/linearLayoutMainMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:visibility="invisible">

                    <LinearLayout
                        android:id="@+id/linearLayoutMainMenuRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonMainReadTag"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/read_tag"
                            android:onClick="onShowReadTag"
                            android:text="@string/action_read_tag" />

                        <Button
                            android:id="@+id/buttonMainWriteTag"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/write_tag"
                            android:onClick="onShowWriteTag"
                            android:text="@string/action_write_tag" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutMainMenuRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonMainEditCardDump"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/edit_dump"
                            android:onClick="onOpenTagDumpEditor"
                            android:text="@string/action_edit_tag_dump" />

                        <Button
                            android:id="@+id/buttonMainEditKeyDump"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/edit_keys"
                            android:onClick="onOpenKeyEditor"
                            android:text="@string/action_edit_key_dump" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutMainMenuRow3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/buttonMainTools"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/tools"
                            android:onClick="onShowTools"
                            android:text="@string/action_tools" />

                        <Button
                            android:id="@+id/buttonMainHelp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/help_and_info"
                            android:onClick="onShowHelp"
                            android:text="@string/action_help" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textViewMainFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="1dp"
                android:paddingRight="14dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
